# msg_constraints_ai_project

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: groq_final_instances.jsonl  sample_instances.jsonl  smoke.jsonl
results/: experiment_results.csv  groq_final_analysis.md  groq_final_results.csv  groq_final_results_70b.csv  unified_instant_v12_results.csv  unified_instant_v14_constraints.csv  unified_instant_v15_constraints.csv  unified_results.csv
scripts/: analyze_results.py  run_demo.py
src/messagegen/: cli.py  constraints.py  evaluator.py  experiment.py  llm.py  models.py  simulator.py  strategies.py  utils.py
