[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "messagegen-constraints"
version = "0.1.0"
description = "Generador de mensajes bajo restricciones estructurales para proyecto IA + Simulacion"
requires-python = ">=3.10"
authors = [{name = "Proyecto IA"}]
dependencies = []

[project.scripts]
messagegen = "messagegen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
